# Probabl

./: CLAUDE.md  README.md  Todo.md  idea.md  pyproject.toml
src/: 8_schools.py  8_schools_from_builder.py  8_schools_functional.py  8_schools_ppc.py  eigth_schools_from_builder.py  example.py  main.py  normal_likelihood.py  normal_prior.py
src/core/: model.py  reader.py  variable.py
src/distributions/: __init__.py  continous.py  distribution.py  model_builder.py
src/examples/: context_aware_example.py  eight_schools_context_aware.py  enhanced_model_example.py  hierarchical_model.py  linear_regression_workflow.py
src/inference/: __init__.py  checking.py  context.py  parameters.py  samplers.py  simulation.py  workflow.py
